<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud"
    android:orientation="vertical">

    <include layout="@layout/topbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/important_color_brown"
        android:orientation="horizontal"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:paddingLeft="@dimen/padding_size_10"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_size_20"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/rel_left_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/img_car_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:src="@drawable/icon_car_type" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/txt_size_10"
                        android:layout_toRightOf="@+id/img_car_type"
                        android:text=""
                        android:singleLine="true"
                        android:layout_centerVertical="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/txt_size_16" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_size_10"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img_car_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:background="@drawable/icon_car_no" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/txt_size_10"
                        android:layout_toRightOf="@+id/img_car_no"
                        android:text=""
                        android:layout_centerVertical="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/txt_size_14" />

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/txt_size_12"
            android:layout_weight="1">

            <ImageView
                android:layout_width="207dp"
                android:layout_height="86dp"
                android:padding="@dimen/margin_size_10"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true" />

        </RelativeLayout>

    </LinearLayout>
    <RelativeLayout
        android:id="@+id/ll_car_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1A3C58">


        <ImageView
            android:id="@+id/img_car_photo"
            android:layout_width="180dp"
            android:layout_height="90dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/bg_car" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_car_photo">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tv_car_model"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:drawableLeft="@drawable/ic_car"
                        android:drawablePadding="8dp"
                        android:text=""
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_car_no"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="28dp"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_car_no"
                    android:drawablePadding="8dp"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>
        </RelativeLayout>


    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">
        <View
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/icon_curve" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/personal_info_head"
        android:background="@color/white">

        <TextView
            android:id="@+id/illegal_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/txt_size_17"
            android:text="@string/peccancy_position"
            android:textSize="@dimen/txt_size_14" />

        <TextView
            android:id="@+id/tv_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/txt_size_16"
            android:layout_toRightOf="@+id/illegal_location"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_size_5"
            android:gravity="right"
            android:textSize="@dimen/txt_size_12" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/personal_info_head"
        android:layout_marginTop="0.5dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/illegal_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/txt_size_16"
            android:text="@string/peccancy_type"
            android:textSize="@dimen/txt_size_14" />

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/txt_size_16"
            android:layout_marginLeft="@dimen/margin_size_5"
            android:gravity="right"
            android:textSize="@dimen/txt_size_12" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="0.5dp"
        android:minHeight="@dimen/personal_info_head">
        <TextView
            android:id="@+id/illegal_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/txt_size_16"
            android:text="@string/peccancy_time"
            android:textSize="@dimen/txt_size_14" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/txt_size_16"
            android:text="sfdff"
            android:textSize="@dimen/txt_size_12" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="0.5dp"
        android:minHeight="@dimen/personal_info_head">

        <TextView
            android:id="@+id/illegal_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/txt_size_16"
            android:text="@string/fine_money"
            android:textSize="@dimen/txt_size_14" />

        <TextView
            android:id="@+id/tv_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/txt_size_16"
            android:text="sfds"
            android:textSize="@dimen/txt_size_12" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="0.5dp"
        android:minHeight="@dimen/personal_info_head">

        <TextView
            android:id="@+id/illegal_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/txt_size_16"
            android:text="@string/deduction"
            android:textSize="@dimen/txt_size_14" />

        <TextView
            android:id="@+id/tv_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/txt_size_16"
            android:text="sdfsadf"
            android:textSize="@dimen/txt_size_12" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_size_15">

        <TextView
            android:id="@+id/illegal_remind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/any_question" />

        <TextView
            android:id="@+id/illegal_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/illegal_remind"
            android:text="@string/peccancy_contact"
            android:textColor="@color/textcolor_blue" />
    </RelativeLayout>

</LinearLayout>